--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.0.1",
+    "faker": "^4.1.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-virtuoso": "^0.6.1"
